# importcheck

./: .bumpversion.cfg  .pre-commit-config.yaml  CONTRIBUTING.rst  MANIFEST.in  README.rst  __pkginfo__.py  formate.toml  pyproject.toml  repo_helper.yml  requirements.txt  setup.cfg  setup.py  tox.ini
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: octocheese.yml  python_ci.yml  python_ci_linux.yml  python_ci_macos.yml
doc-source/: Source.rst  api.rst  conf.py  contributing.rst  index.rst  license.rst  requirements.txt  usage.rst
doc-source/_templates/: base.html
doc-source/_templates/sidebar/: navigation.html
doc-source/api/: importcheck.rst
importcheck/: __init__.py  __main__.py
tests/: conftest.py  test_cli.py  test_importcheck.py  test_utils.py
tests/test_cli_/: test_cli_Darwin_.txt  test_cli_Linux_.txt  test_cli_bad_config.txt  test_cli_count_modules_as_args_args1_.txt  test_cli_errors_show_3_10_.txt  test_cli_errors_show_3_11_.txt  test_cli_errors_show_3_6_.txt  test_cli_errors_show_3_6_pypy_.txt  test_cli_errors_show_3_7_pypy_.txt  test_cli_errors_show_3_8_.txt  test_cli_errors_show_3_8_pypy_.txt  test_cli_help.txt  test_cli_help_click8.txt  test_cli_no_op_1_.txt  test_cli_verbose_Linux_.txt  test_cli_verbose_errors.txt  test_cli_verbose_errors_2_Windows_3_6_.txt  test_cli_verbose_verbose_errors_3_10_.txt  test_cli_verbose_verbose_errors_3_11_.txt  test_cli_verbose_verbose_errors_3_6_.txt  test_cli_verbose_verbose_errors_3_6_pypy_.txt  test_cli_verbose_verbose_errors_3_7_.txt  test_cli_verbose_verbose_errors_3_7_pypy_.txt  test_cli_verbose_verbose_errors_3_8_pypy_.txt  test_cli_verbose_verbose_errors_3_9_pypy_.txt
tests/test_importcheck_/: test_cli_Darwin_.txt  test_cli_Windows_.txt  test_cli_count_modules_as_args_args0_.txt  test_cli_errors_count.txt  test_cli_errors_show_3_10_Linux_.txt  test_cli_errors_show_3_6_Linux_.txt  test_cli_errors_show_3_7_.txt  test_cli_errors_show_3_7_Linux_.txt  test_cli_errors_show_3_8_Linux_.txt  test_cli_errors_show_3_9_.txt  test_cli_errors_show_3_9_Linux_.txt  test_cli_stdin.txt  test_cli_verbose_Darwin_.txt  test_cli_verbose_Windows_.txt  test_cli_verbose_errors_2_Linux_3_10_.txt  test_cli_verbose_errors_2_Linux_3_6_.txt  test_cli_verbose_errors_2_Linux_3_7_.txt  test_cli_verbose_errors_2_Linux_3_8_.txt  test_cli_verbose_errors_2_Linux_3_9_.txt  test_cli_verbose_verbose_errors_3_8_.txt  test_importchecker_False_collections_.txt  test_importchecker_False_collections_.yml  test_importchecker_False_collections_importlib_.txt  test_importchecker_False_collections_importlib_.yml  test_importchecker_False_empty_.txt  test_importchecker_True_collections_importlib_.txt  test_importchecker_True_importlib_.txt  test_importchecker_True_importlib_.yml  test_importchecker_errors_show_False_3_9_.txt  test_importchecker_errors_show_False_3_9_.yml  test_importchecker_errors_show_True_3_6_.txt
tests/test_utils_/: test_load_toml_pyproject_toml_.yml
