[build-system]
requires = [ "setuptools>=40.6.0", "wheel>=0.34.2",]
build-backend = "setuptools.build_meta"

[project]
name = "importcheck"
version = "0.2.0"
description = "A tool to check all modules can be correctly imported."
readme = "README.rst"
keywords = [ "import", "test",]
dynamic = [ "requires-python", "classifiers", "dependencies",]
[[project.authors]]
email = "dominic@davis-foster.co.uk"
name = "Dominic Davis-Foster"

[project.license]
file = "LICENSE"

[project.urls]
Homepage = "https://github.com/domdfcoding/importcheck"
"Issue Tracker" = "https://github.com/domdfcoding/importcheck/issues"
"Source Code" = "https://github.com/domdfcoding/importcheck"
Documentation = "https://importcheck.readthedocs.io/en/latest"

[project.scripts]
importcheck = "importcheck.__main__:main"
