[build-system]
requires = [ "whey",]
build-backend = "whey"

[project]
name = "importcheck"
version = "0.3.0"
description = "A tool to check all modules can be correctly imported."
readme = "README.rst"
keywords = [ "import", "test",]
dynamic = [ "requires-python", "classifiers", "dependencies",]

[[project.authors]]
email = "dominic@davis-foster.co.uk"
name = "Dominic Davis-Foster"


[project.license]
file = "LICENSE"

[project.urls]
Homepage = "https://github.com/python-coincidence/importcheck"
"Issue Tracker" = "https://github.com/python-coincidence/importcheck/issues"
"Source Code" = "https://github.com/python-coincidence/importcheck"
Documentation = "https://importcheck.readthedocs.io/en/latest"

[project.scripts]
importcheck = "importcheck.__main__:main"

[tool.whey]
base-classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Typing :: Typed",
]
python-versions = [ "3.6", "3.7", "3.8", "3.9",]
python-implementations = [ "CPython", "PyPy",]
platforms = [ "Windows", "macOS", "Linux",]
license-key = "MIT"

[tool.mkrecipe]
conda-channels = [ "python-coincidence",]
extras = "all"
